# UniversityGradesProject

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
database/: grades.db
flask_app/: app.py  create_db.py
flask_app/static/: README.md
flask_app/static/css/: styles.css
flask_app/static/js/: scripts.js
flask_app/templates/: index.html
scripts/: README.md  check_login_fields.py  debug_after_login.py  find_elements.py  test_telegram.py
selenium_script/: README.txt  config.py  get_grades.py  requirements.txt
src/university_grades/: __init__.py  __main__.py  cli.py
src/university_grades/core/: __init__.py  config.py  grade_repository.py  notifier.py
src/university_grades/scraping/: __init__.py  scraper.py
src/university_grades/web/: __init__.py  app.py  create_db.py
src/university_grades/web/static/css/: styles.css
src/university_grades/web/static/js/: scripts.js
src/university_grades/web/templates/: dashboard.html  index.html  login.html
tests/: check_login_fields.py  conftest.py  debug_after_login.py  find_elements.py  test_config.py  test_flask_app.py  test_get_grades.py  test_grade_repository.py  test_integration.py  test_notifier.py  test_telegram.py
